<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAF8F1"
    android:clipToPadding="false"
    tools:context=".com.foodfreak.main.user.Canteen">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_canteen_logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:text="Canteens"
            android:textColor="@android:color/white"
            android:textSize="@dimen/contents_size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/holo_red_dark"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/search_background"
            android:hint="Search"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="153dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/search_background"
                android:drawableLeft="@drawable/ic_search_black_24dp"

                android:drawablePadding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/greeting_cons_layout"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/home_greet_design_main"
                android:elevation="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/flash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_ligth_logo" />

                <TextView
                    android:id="@+id/good_morning_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/good_mrn_msg"
                    android:textColor="#F7FF00"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/flash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.34"
                    app:layout_constraintStart_toEndOf="@+id/flash"
                    app:layout_constraintTop_toTopOf="@+id/flash"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/time_for_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/time_for_msg"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/good_morning_tv"
                    app:layout_constraintTop_toBottomOf="@+id/good_morning_tv" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/averia_serif_libre_light"
                android:text="@string/can_near_you"
                android:textColor="@android:color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/greeting_cons_layout"
                app:layout_constraintTop_toBottomOf="@+id/greeting_cons_layout" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@+id/greeting_cons_layout"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/view3"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@id/textView8">
                <androidx.cardview.widget.CardView
                    android:id="@+id/canteen_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:elevation="18dp"
                    android:focusable="true"
                    android:foreground="?selectableItemBackground"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="16dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/cateen_image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:src="@drawable/megabite"
                        android:tint="#50000000" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/canteen_name_fg_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/averia_serif_libre_light"
                            android:letterSpacing="0.2"
                            android:text="MEGA BITE"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/contents_size"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/canteen_address_fg_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="LG, E1 Block"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="italic"
                            app:layout_constraintEnd_toEndOf="@+id/canteen_name_fg_tv"
                            app:layout_constraintStart_toStartOf="@+id/canteen_name_fg_tv"
                            app:layout_constraintTop_toBottomOf="@+id/canteen_name_fg_tv" />

                        <TextView
                            android:id="@+id/canteen_specialises_fg_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:text="• Chinese • Fast Food"
                            android:textColor="@android:color/white"
                            android:textSize="12sp"
                            android:textStyle="italic|bold"
                            app:layout_constraintEnd_toEndOf="@+id/canteen_name_fg_tv"
                            app:layout_constraintStart_toStartOf="@+id/canteen_name_fg_tv"
                            app:layout_constraintTop_toTopOf="@+id/canteen_address_fg_tv" />

                        <TextView
                            android:id="@+id/canteen_timing_fg_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="68dp"
                            android:layout_marginEnd="4dp"
                            android:layout_marginRight="4dp"
                            android:text="Opens -  9:00 AM\nCloses - 5:00 PM"
                            android:textColor="@android:color/white"
                            android:textSize="10sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/canteen_specialises_fg_tv" />

                        <TextView
                            android:id="@+id/slogan_canteen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="@font/averia_serif_libre_light"
                            android:text="•Engineers Ka Adda•"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="19dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="8dp"
                            android:numStars="5"
                            android:theme="@style/RatingBar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/canteen_timing_fg_tv"
                            app:layout_constraintTop_toBottomOf="@+id/canteen_timing_fg_tv"
                            app:layout_constraintVertical_bias="0.0" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="25dp"
                            android:layout_height="20dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@android:color/holo_green_dark"
                            android:paddingLeft="2.5dp"
                            android:text="4.0"
                            android:textColor="@android:color/white"
                            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                            app:layout_constraintEnd_toStartOf="@+id/ratingBar"
                            app:layout_constraintTop_toTopOf="@+id/ratingBar"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





</LinearLayout>